# termplay

./: Cargo.toml
src/: img.rs  main.rs  video.rs
