[package]
name = "termplay"
version = "1.1.3"
description = "Play an image/video in your terminal!"
repository = "https://github.com/legolord208/termplay"
authors = ["LEGOlord208 <LEGOlord208@krake.one>"]
license = "MIT"

[dependencies]
tempdir = "0.3"
clap = "2.24"
image = "0.14"
lazy_static = "0.2"
time = "0.1"
termion = "1.4"
